# voxl-read-imu-cpp-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install_build_deps.sh
include/: read-imu.h
pkg/control/: control  postinst
src/: CMakeLists.txt  main.cpp  read-imu.cpp
